--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-github-webhook": "^1.0.6",
     "github-webhook-handler": "^0.7.1",
     "mongoose": "^5.0.10"
   }
